# smaq

./: .gitignore  README.md  SMAQ_Qwen_Benchmark.ipynb  Triton_Kernel_Validation.ipynb  audit_claims.py  benchmark.py  hybrid_proof.py  proof.py  pyproject.toml  test_generic_core.py  test_modular.py  validate_paper.py
smaq/: __init__.py  backends.py  block_vq.py  calibration.py  capture.py  core.py  hybrid_config.py  kv_cache.py  layout.py  quantizer.py  score.py  ssf.py  ssm_quantizer.py  store.py  strategies.py  triton_kernels.py  vllm_attn_backend.py  weighted_scalar.py
smaq/integration/: __init__.py  vllm.py
