[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smaq"
version = "0.1.0"
description = "Generic SMAQ core and integration utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
packages = ["smaq", "smaq.integration"]

